results/mnist/snubasweep/embedding_resnet18/lf_class_options_/em_hard_labels_True/snuba_cardinality_2/n_labeled_points_500/res.log
  File "fwrench/applications/mnist.py", line 131
    logger.info(f'Using LF classes: {lf_classes}')
                                                ^
SyntaxError: invalid syntax
